@@ -17,6 +17,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+common/porting.c
+include/libproto.h
+include/win32.h: added 'const' specifier to str-related functions.
+Ryo 2004-03-26
+
 common/exp.c
 common/living.c
 common/loader.[cl]
